package lotto.constants;

public class LottoConstants {
    public static final int LOTTO_PRICE = 1000;
    public static final int LOTTO_LIMIT_PRICE = 100000;
    public static final int MIN_LOTTO_NUMBER = 1;
    public static final int MAX_LOTTO_NUMBER = 45;
    public static final int LOTTO_SIZE = 6;
    public static final String COMMA = ",";
}
