package lotto.view.formatter;

public interface Formatter {
    String format(Object value);
}
